# plaidml

./: .gdbinit  environment-windows.yml
base/util/: file.cc  file.h
bzl/: BUILD  plaidml.bzl  workspace.bzl
ci/: pipeline.yml  plan.yml
conda/: unix.BUILD  unix.yml  windows.BUILD  windows.yml
plaidml/: CMakeLists.txt  plaidml.cc
plaidml/bridge/onnxruntime/: BUILD
plaidml/bridge/openvino/: BUILD  plaidml_builder.cpp  plaidml_ops.def  plaidml_ops.hpp
plaidml/bridge/openvino/ops/: avg_pool.cpp  convolution.cpp  max_pool.cpp  reduce_mean.cpp  reshape.cpp
plaidml/bridge/openvino/src/plaidml_plugin/: plaidml_executable_network.cpp  plaidml_infer_request.cpp  plaidml_plugin.cpp  plaidml_util.cpp
plaidml/bridge/openvino/src/plaidml_plugin/ops/: depth_to_space.cpp  pad.cpp  range.cpp  reduce_mean.cpp  space_to_depth.cpp
plaidml/bridge/openvino/tests/functional/plugin/plaidml/shared_tests_instances/single_layer_tests/: BUILD  activation.cpp  eltwise.cpp  range.cpp
plaidml/edsl/: CMakeLists.txt
plaidml/edsl/dpcpp/: simple_example_dpc.cc
plaidml/edsl/examples/: CMakeLists.txt
plaidml/edsl/tests/: BUILD  edsl_test.cc  simple.cc  simple_example.cc
plaidml/op/: BUILD  __init__.py  execution_test.py  op.h  op_test.cc
plaidml/op/lib/: BUILD  fft.cc  fft.h  ops.cc
pmlc/ast/: ast.cc  ast.h  builder.cc
pmlc/compiler/: program.h
pmlc/rt/: CMakeLists.txt
tile/base/: hal.h  program_cache.cc  program_cache.h
tile/codegen/: BUILD  alias.cc  autotile.cc  cache.cc  codegen.proto  generate_plans.cc  generate_plans.h  pad.cc  (+2 more)
vta/: BUILD  Makefile  README.md
(+80 files in other folders)
